[tool.poetry]
name = "textcraft"
version = "0.1.0"
description = ""
authors = ["Kip Yin <28321392+kipyin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
